# sistema-delivery

./: .env.example  Dockerfile  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: asgi.py  settings.py  urls.py
cart/: models.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_cart_client_session.py
checkout/: admin.py  apps.py  models.py  signals.py  views.py
checkout/migrations/: 0001_initial.py  0002_order_client_session.py  0003_order_customer.py  0003_remove_orderitem_order_remove_orderitem_product_and_more.py  0004_alter_order_payment_method.py  0005_order_payment_integration_failed.py
checkout/templates/checkout/: checkout.html  success.html
core/: models.py  signals.py  urls.py  views.py
core/context_processors/: global_context.py
core/management/commands/: create_admin_user.py  mock_orders.py  mock_products.py
core/migrations/: 0001_initial.py
customers/: admin.py  apps.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py
customers/templates/customers/: login.html
dashboard/: consumers.py  urls.py  views.py
dashboard/templates/dashboard/: category_list.html  customer_list.html  dashboard.html  login.html  order_detail.html  order_list.html  (+2 more)
dashboard/utils/: metrics.py  test_metrics.py
orders/: models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: views.py
products/migrations/: 0001_initial.py
reports/: admin.py  apps.py  models.py  scheduler.py  tasks.py  urls.py  utils.py  views.py
reports/migrations/: 0001_initial.py
services/: notifications.py  views.py
static/components/: header.css
templates/components/: header.html  pagination.html
utils/: normalize.py  session.py
(+4 files in other folders)
