[project]
name = "delivery-agua"
version = "0.1.0"
description = ""
authors = [
    {name = "Kauanrodrigues01m",email = "kauanrl09@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (==5.1)",
    "python-decouple (>=3.8,<4.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)",
    "whitenoise (>=6.10.0,<7.0.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "django-redis (>=6.0.0,<7.0.0)",
    "channels (>=4.3.1,<5.0.0)",
    "channels-redis (>=4.3.0,<5.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "colorlog (>=6.9.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.9"
taskipy = "^1.14.1"
djlint = "^1.36.4"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]
ignore = ["E501", "B904"]
exclude = ["migrations", ".venv", "venv", "env"]

[tool.taskipy.tasks]
run = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
createsuperuser = "python manage.py createsuperuser"
collectstatic = "python manage.py collectstatic"
shell = "python manage.py shell"
test = "python manage.py test"
lint = 'ruff check .'
format = 'ruff check --fix && ruff format .'

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["test_*.py", "*_test.py"]